--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.1",
     "http-server": "^0.6.1",
     "shelljs": "^0.2.6"
   },
   "scripts": {
-    "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
 
@@ -27,5 +24,32 @@
     "protractor": "protractor e2e-tests/protractor.conf.js",
 
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+  },
+  "dependencies": {
+    "angular": "1.6.4",
+    "angular-animate": "1.6.4",
+    "angular-aria": "1.6.4",
+    "angular-base64": "^2.0.5",
+    "angular-cache": "^4.6.0",
+    "angular-cookies": "1.6.4",
+    "angular-hotkeys": "^1.7.0",
+    "angular-nvd3": "^1.0.9",
+    "angular-sanitize": "1.2.29",
+    "angular-schema-form": "^0.8.13",
+    "angular-toastr": "^2.1.1",
+    "angular-tree-control": "^0.2.28",
+    "angular-ui-ace": "^0.2.3",
+    "angular-ui-bootstrap": "^1.3.3",
+    "angular-ui-router": "^0.4.2",
+    "angular-utils-ui-breadcrumbs": "^0.2.2-1",
+    "angular-visjs": "^4.16.0",
+    "jquery": "^2.2.3",
+    "jquery-file-download": "^1.4.6",
+    "jquery-hoverintent": "^1.8.2",
+    "jquery-outside-events": "^1.0.0",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "qtip2": "^3.0.3",
+    "ui-select": "^0.19.6"
   }
 }
